# universal-mcp-client

./: .gitignore  README.md  app.py  pyproject.toml
client/: config.py  constants.py  main.py
client/agent/: __init__.py
client/agent/graph/: __init__.py  llm.py  nodes.py  state.py  tools.py
client/components/: __init__.py  chat.py  hero.py  model_selector.py
docs/: resources.md
scripts/: delete-local-branches.sh
