[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.0.6",
    "langchain-openai>=0.3.11",
    "langchain-tavily>=0.1.5",
    "langgraph>=0.3.22",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.3",
    "streamlit>=1.44.1",
]
